Prevent text wrap on cookie notice button

--- a/src/_sass/components/_cookie-notice.scss
+++ b/src/_sass/components/_cookie-notice.scss
@@ -22,6 +22,10 @@
     padding-right: 1.5rem;
   }
 
+  button {
+    text-wrap: nowrap;
+  }
+
   &.show {
     display: block;
     animation-duration: 500ms;
@@ -41,7 +45,7 @@
     p {
       font-size: 1rem;
       line-height: 1.6;
-      margin-right: 2rem;
+      margin-right: 1.5rem;
       margin-bottom: 0;
     }
   }
